--- a/html/contact.html
+++ b/html/contact.html
@@ -26,6 +26,7 @@
             <nav class="mobile-nav">
                 <a href="index.html">Home</a>
                 <a href="work.html">Work</a>
+                <a href="digital.html">Digital Products</a>
                 <a href="about.html">About</a>
                 <a href="contact.html">Contact</a>
             </nav>
